--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^3.0.2",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8"
   },
