--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
