--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,18 @@
     "@clerk/clerk-react": "^5.45.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.513.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
@@ -28,6 +33,7 @@
     "react-resizable-panels": "^3.0.2",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8"
   },
