--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.513.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
